# trie-hadt

./: Cargo.toml  README.md
appspec/triespec/: app.json
appspec/triespec/zomes/zomespec/: zome.json
appspec/triespec/zomes/zomespec/code/: .build  Cargo.toml
appspec/triespec/zomes/zomespec/code/src/: dictionary.rs  lib.rs
src/: adt.rs  entries.rs  lib.rs
