[package]
  name = "zomespec"
  version = "0.1.0"
  authors = ["Suraj Jena <jena.suraj.k@gmail.com>"]
  edition = "2018"
[dependencies]
  serde = "1.0"
  serde_json = "1.0"
  serde_derive = "1.0"
  hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
  hadt = { path = "../../../../../" }
  holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
